2004-05-29  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "tk" to ALL_LINGUAS.

2004-05-22  Rodney Dawes  <dobey@ximian.com>

	* 48x48/mimetypes/Makefile.am (install-data-hook):
	Fix symlink creation, patch from Christian Lohmaier

	Fixes #142977

2004-05-18  Rodney Dawes  <dobey@ximian.com>

	* configure.in: Fix variable names in hicolor check conditional

	Fixes #142001

2004-04-19  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24}/stock/table/Makefile.am 
	* {16x16,24x24}/stock/table/stock_select-cell.png: fixup for rodo
	
2004-04-19  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/net/stock_mail-priority-high.png: fix canvas size
	
2004-04-16  Jakub Steiner <jimmac@ximian.com>

	* 48x48/mimetypes/Makefile.am:
	* 48x48/mimetypes/gnome-mime-text-x-vcalendar.png
	* 48x48/mimetypes/gnome-mime-text-x-vcard.png: not the same thing

2004-04-19  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post-release bump of version to 1.2.2

=== gnome-icon-theme 1.2.1 ===

2004-04-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump version to 1.2.1

2004-04-14  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/Makefile.am:
	* 48x48/apps/Makefile.am:
	* 16x16/apps/im-nov.png:
	* 48x48/apps/im-nov.png: groupwise messager

2004-04-14  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/Makefile.am:
	* 48x48/apps/Makefile.am:
	* 16x16/apps/im.png:
	* 48x48/apps/im.png: generic instant messaging icon

2004-04-14  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/stock_notebook.png:
	* 24x24/stock/generic/stock_notebook.png:
	* 32x32/stock/generic/stock_notebook.png:
	* 48x48/stock/generic/stock_notebook.png: minor fixups

2004-04-14  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/im-jabber.png: oops, had a wrong size there

2004-04-14  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24}/stock/io/stock_save_as.png (r)
	* {16x16,24x24}/stock/io/stock_save-as.png: renamed to be
	  consistent. Discussed in bugzilla (bug #129294)