@@ -26,4 +26,7 @@ icon_DATA =\
    stock_up-one-dir.png \
 	$(NULL)
 
+install-data-hook:
+	$(INSTALL) stock_save-as.png $(DESTDIR)$(icondir)/stock_save_as.png
+
 EXTRA_DIST = $(icon_DATA)
